Gui's creation methods changed. Fixed minor bugs in messages. Code cleanup.